--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5000"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -22,6 +22,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-html-parser": "^2.0.6",
     "@types/uuid": "^9.0.7",
+    "@vitejs/plugin-react": "^4.3.0",
     "babel-polyfill": "^6.26.0",
     "cross-env": "^7.0.3",
     "dompurify": "^3.0.8",
