--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 5000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "cross-env": "^7.0.3",
     "dompurify": "^3.0.8",
+    "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "react": "^18.2.0",
