--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
-    "@mui/styles": "^5.15.4",
+    "@mui/system": "5.16.7",
     "@types/dompurify": "^3.0.5",
     "@types/draft-js": "^0.11.17",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-html-parser": "^2.0.6",
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.3.0",
     "babel-polyfill": "^6.26.0",
@@ -29,10 +28,10 @@
     "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "html-react-parser": "^5.1.12",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.21.1",
     "uuid": "^9.0.1"
   },
